--- a/war/index.html
+++ b/war/index.html
@@ -22,6 +22,13 @@
       .info p {
 		font-size: 1.15em      
       }
+      
+      .page-section h2 {
+		  padding-bottom: 0.5em;
+		  margin: 1em 0 0.5em 0;
+		  border-bottom: 1px solid #eeeeee;
+		  line-height: 1;
+		}
     </style>
     <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
     <!--[if lt IE 9]>
